--- a/app/views/levels/primary_button.html.erb
+++ b/app/views/levels/primary_button.html.erb
@@ -1,7 +1,23 @@
-<span>Click me!</span>
+<span class="fancy-button">Click me!</span>
 
 <style>
 
-  /* Write your CSS here to make the span look like a button. */
+  /* 
+  Write your CSS here to make the span look like a button. 
+  COMMAND SHIFT P TO FORMAT DOCUMENTS 
+  */
+  .fancy-button {
+    background-color: blue;
+    color: white;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-right: 10px;
+    padding-left: 10px;
+    border-radius: 5px;
+
+    box-shadow: 2px -1px 86px 39px rgba(0,0,0,0.33) inset;
+    -webkit-box-shadow: 2px -1px 86px 39px rgba(0,0,0,0.33) inset;
+    -moz-box-shadow: 2px -1px 86px 39px rgba(0,0,0,0.33) inset;
+  }
 
 </style>
