--- a/app/views/levels/primary_button.html.erb
+++ b/app/views/levels/primary_button.html.erb
@@ -20,4 +20,13 @@
     -moz-box-shadow: 2px -1px 86px 39px rgba(0,0,0,0.33) inset;
   }
 
+  .fancy-button:hover {
+    background-color: darkblue;
+  }
+  
+
+  .fancy-button:active {
+    background-color: red;
+  }
+
 </style>
